--- a/.github/workflows/_release.yml
+++ b/.github/workflows/_release.yml
@@ -12,7 +12,7 @@ on:
       working-directory:
         required: true
         type: string
-        default: 'libs/{lib}'
+        default: 'libs/milvus'
 
 env:
   PYTHON_VERSION: "3.11"
