--- a/libs/milvus/pyproject.toml
+++ b/libs/milvus/pyproject.toml
@@ -27,7 +27,7 @@ ignore_missing_imports = "True"
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
 pymilvus = "^2.4.3"
-langchain-core = { version = ">=0.2.38,<0.4", python = ">=3.9" }
+langchain-core = ">=0.2.38,<0.4"
 
 [tool.coverage.run]
 omit = ["tests/*"]
@@ -64,7 +64,7 @@ syrupy = "^4.0.2"
 pytest-watcher = "^0.3.4"
 pytest-asyncio = "^0.21.1"
 milvus_model = "^0.2.0"
-langchain-core = {git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core"}
+langchain-core = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core" }
 
 [tool.poetry.group.codespell.dependencies]
 codespell = "^2.2.0"
@@ -79,7 +79,7 @@ ruff = "^0.1.5"
 mypy = "^0.991"
 types-requests = "^2"
 simsimd = "^5.0.0"
-langchain-core = {git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core"}
+langchain-core = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core" }
 
 [tool.poetry.group.dev.dependencies]
-langchain-core = {git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core"}
+langchain-core = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core" }
