--- a/libs/milvus/pyproject.toml
+++ b/libs/milvus/pyproject.toml
@@ -27,7 +27,7 @@ ignore_missing_imports = "True"
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
 pymilvus = "^2.4.3"
-langchain-core = { version = ">=0.2.38,<0.4", python = ">=3.9" }
+langchain-core = ">=0.2.38,<0.4"
 
 [tool.coverage.run]
 omit = ["tests/*"]
