Temporarily hide integartion test runs
Signed-off-by: ChengZi <chen.zhang@zilliz.com>

--- a/.github/workflows/_release.yml
+++ b/.github/workflows/_release.yml
@@ -157,9 +157,10 @@ jobs:
         run: make tests
         working-directory: ${{ inputs.working-directory }}
 
-      - name: Run integration tests
-        run: make integration_tests
-        working-directory: ${{ inputs.working-directory }}
+# TODO: keep this the same with that in _test.yml
+#      - name: Run integration tests
+#        run: make integration_tests
+#        working-directory: ${{ inputs.working-directory }}
 
       - name: Get minimum versions
         working-directory: ${{ inputs.working-directory }}
