--- a/.github/workflows/_lint.yml
+++ b/.github/workflows/_lint.yml
@@ -9,7 +9,7 @@ on:
         description: "From which folder this pipeline executes"
 
 env:
-  POETRY_VERSION: "1.7.1"
+  POETRY_VERSION: "2.1.3"
   WORKDIR: ${{ inputs.working-directory == '' && '.' || inputs.working-directory }}
 
   # This env var allows us to get inline annotations when ruff has complaints.
@@ -52,7 +52,7 @@ jobs:
         shell: bash
         working-directory: ${{ inputs.working-directory }}
         run: |
-          poetry lock --check
+          poetry check --lock
 
       - name: Install dependencies
         # Also installs dev/lint/test/typing dependencies, to ensure we have
