--- a/libs/milvus/pyproject.toml
+++ b/libs/milvus/pyproject.toml
@@ -2,14 +2,23 @@
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.poetry]
+[project]
 name = "langchain-milvus"
 version = "0.2.0rc1"
 description = "An integration package connecting Milvus and LangChain"
 authors = []
 readme = "README.md"
-repository = "https://github.com/langchain-ai/langchain-milvus"
-license = "MIT"
+license = {text = "MIT"}
+requires-python = ">=3.9,<4.0"
+dependencies = [
+    "pymilvus>=2.5.7,<3.0",
+    "langchain-core>=0.2.38,<0.4",
+]
+
+[project.urls]
+"Source Code" = "https://github.com/langchain-ai/langchain-milvus/tree/main/libs/milvus"
+"Release Notes" = "https://github.com/langchain-ai/langchain-milvus/releases"
+Repository = "https://github.com/langchain-ai/langchain-milvus"
 
 [tool.ruff]
 select = ["E", "F", "I", "T201"]
@@ -19,15 +28,6 @@ disallow_untyped_defs = "True"
 [[tool.mypy.overrides]]
 module = ["pymilvus"]
 ignore_missing_imports = "True"
-
-[tool.poetry.urls]
-"Source Code" = "https://github.com/langchain-ai/langchain-milvus/tree/main/libs/milvus"
-"Release Notes" = "https://github.com/langchain-ai/langchain-milvus/releases"
-
-[tool.poetry.dependencies]
-python = ">=3.9,<4.0"
-pymilvus = "^2.5.7"
-langchain-core = ">=0.2.38,<0.4"
 
 [tool.coverage.run]
 omit = ["tests/*"]
