--- a/libs/milvus/pyproject.toml
+++ b/libs/milvus/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [project]
 name = "langchain-milvus"
-version = "0.2.0rc1"
+version = "0.2.0"
 description = "An integration package connecting Milvus and LangChain"
 authors = []
 readme = "README.md"
