update dependencies to support langchain-core 1.0.0
Signed-off-by: ChengZi <chen.zhang@zilliz.com>

--- a/libs/milvus/pyproject.toml
+++ b/libs/milvus/pyproject.toml
@@ -9,10 +9,10 @@ description = "An integration package connecting Milvus and LangChain"
 authors = []
 readme = "README.md"
 license = {text = "MIT"}
-requires-python = ">=3.9,<4.0"
+requires-python = ">=3.10,<4.0"
 dependencies = [
     "pymilvus>=2.5.7,<3.0",
-    "langchain-core>=0.2.38,<0.4",
+    "langchain-core>=1.0.0",
 ]
 
 [project.urls]
@@ -64,6 +64,7 @@ syrupy = "^4.0.2"
 pytest-watcher = "^0.3.4"
 pytest-asyncio = "^0.21.1"
 "pymilvus.model" = "^0.3.1"
+milvus-lite = "^2.5.1"
 onnxruntime = "<= 1.19.2"  # the higher version of onnxruntime can not be found in the CI installation
 langchain-core = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core" }
 
