--- a/libs/milvus/pyproject.toml
+++ b/libs/milvus/pyproject.toml
@@ -65,7 +65,7 @@ pytest-watcher = "^0.3.4"
 pytest-asyncio = "^0.21.1"
 "pymilvus.model" = "^0.3.1"
 milvus-lite = "^2.5.1"
-onnxruntime = "<= 1.19.2"  # the higher version of onnxruntime can not be found in the CI installation
+onnxruntime = "^1.19.2"
 langchain-core = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core" }
 
 [tool.poetry.group.codespell.dependencies]
@@ -73,7 +73,7 @@ codespell = "^2.2.0"
 
 [tool.poetry.group.test_integration.dependencies]
 "pymilvus.model" = "^0.3.1"
-onnxruntime = "<= 1.19.2"
+onnxruntime = "^1.19.2"
 
 [tool.poetry.group.lint.dependencies]
 ruff = "^0.1.5"
